syntax = "proto3";

import "friend.proto";

package vanura.jan.benchmark.java.metrics.protobuf;


message Person {
  string _id = 1;
  int32 index = 2;
  string guid = 3;
  bool isActive = 4;
  string balance = 5;
  string picture = 6;
  int32 age = 7;
  enum EyeColor {
    BLUE = 0;
    BROWN = 1;
    GREEN = 2;
  }
  EyeColor eyeColor = 8;
  string name = 9;
  enum Gender {
    MALE = 0;
    FEMALE = 1;
  }
  Gender gender = 10;
  string company = 11;
  string email = 12;
  string phone = 13;
  string address = 14;
  string about = 15;
  string registered = 16;
  float latitude = 17;
  float longitude = 18;
  repeated string tags = 19;
  repeated Friend friends = 20;
  string greeting = 21;
  enum Fruit {
    APPLE = 0;
    BANANA = 1;
    STRAWBERRY = 2;
  }
  Fruit favoriteFruit = 22;
}
