syntax = "proto3";

import "person.proto";

package vanura.jan.benchmark.java.metrics.protobuf;


message PersonCollection {
  repeated Person persons = 1;
}
